--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
